/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-02-24 22:53:25
 */
syntax = "proto3";

package auth;
option go_package = "/auth";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// 登录请求
message LoginRequest {
  string token = 1;
}

// 登录回复
message LoginReply {
  string userId = 1;
  string ip = 2;
}

// 获取状态回复
message GetStateReply {
  string userId = 2;
  google.protobuf.Timestamp expiredAt = 3;
}

message NotifyRequest {
  string userId = 1;
  string message = 2;
}

message NotifyResponse {
  string message = 1;
}

// 认证
service Auth {
  // 登录
  rpc Login(LoginRequest) returns(LoginReply);
  // 获取状态
  rpc GetState(google.protobuf.Int32Value) returns(GetStateReply);
  // 登出
  rpc Logout(google.protobuf.Int32Value) returns(google.protobuf.Empty);
  // 订阅
  rpc Subscribe(NotifyRequest) returns (stream NotifyResponse) {}
}