/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-03-26 13:59:16
 */

syntax = "proto3";

package internal.rpc.message.bottle_chat;
option go_package = "internal/rpc/message/bottle_chat";

// 接收请求
message ReceiveRequest {
}

// 接收回复
message ReceiveReply {
  string userId = 1; // 用户 id
}

// 点对点聊天
service GroupChat {
  // 接收
  rpc Receive(ReceiveRequest) returns(stream ReceiveReply);
}
