/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-03-26 11:52:02
 */

syntax = "proto3";

import "internal/rpc/message/p2p_chat/online.proto";
import "internal/rpc/message/p2p_chat/offline.proto";
import "internal/rpc/message/p2p_chat/inputting.proto";
import "internal/rpc/message/p2p_chat/input_stop.proto";
import "internal/rpc/message/p2p_chat/message_delivered.proto";
import "internal/rpc/message/p2p_chat/message_read.proto";
import "internal/rpc/message/p2p_chat/message_reject.proto";
import "internal/rpc/message/p2p_chat/message_withdraw.proto";
import "internal/rpc/message/p2p_chat/friend_request.proto";
import "internal/rpc/message/p2p_chat/friend_reply.proto";

package message.p2p_chat;
option go_package = "/message/p2p_chat";

// 接收请求
message ReceiveRequest {
}

// 接收回复
message ReceiveReply {
  string userId = 1; // 用户 id

  oneof Type {
    Online online = 10; // 上线
    Offline offline = 11; // 下线

    Inputting inputting = 4; // 输入中
    InputStop inputStop = 5; // 输入停止

    MessageDelivered messageDelivered = 6; // 消息送达
    MessageRead messageRead = 7; // 消息已读
    MessageReject messageReject = 8; // 消息拒绝
    MessageWithdraw messageWithdraw = 9; // 消息撤回

    FriendRequest friendRequest = 2; // 好友请求
    FriendReply friendReply = 3; // 好友回复
  }
}

// 点对点聊天
service P2pChat {
  // 接收
  rpc Receive(ReceiveRequest) returns(stream ReceiveReply);
}